--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,5 @@
 [settings]
-include_trailing_comma = true
+profile = black
 line_length = 79
-lines_after_imports = 2
-skip = __init__.py
+include_trailing_comma = true
+multi_line_output = 3
