--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,18 @@
 repos:
-  - repo: local
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.10.1  # Use the latest stable version of isort
     hooks:
       - id: isort
-        name: isort
-        entry: isort --settings-file ./.isort.cfg .
-        language: system
-        types: [python]
-        pass_filenames: false
+        args: ["--settings-file", ".isort.cfg"]
 
-      - id: black
-        name: black
-        entry: black config ./.black .
-        language: system
-        types: [python]
-        pass_filenames: false
-
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.0.0  # Use the latest stable version of Flake8
+    hooks:
       - id: flake8
-        name: flake8
-        entry: flake8 config .flake8 .
-        language: system
-        types: [python]
-        pass_filenames: false
+        args: ["--config", ".flake8"]
+
+  - repo: https://github.com/psf/black
+    rev: 23.9.1  # Use the latest stable version of Black
+    hooks:
+      - id: black
+        args: ["--config", ".black", "."]
